dom/clients/api/Clients.cpp
@@ -65,7 +65,11 @@ Clients::Get(const nsAString& aClientID, ErrorResult& aRv)
   }
 
   nsID id;
-  if (!id.Parse(NS_ConvertUTF16toUTF8(aClientID).get())) {
+  // nsID::Parse accepts both "{...}" and "...", but we only emit the latter, so
+  // forbid strings that start with "{" to avoid inconsistency and bugs like
+  // bug 1446225.
+  if (aClientID.IsEmpty() || aClientID.CharAt(0) == '{' ||
+      !id.Parse(NS_ConvertUTF16toUTF8(aClientID).get())) {
     // Invalid ID means we will definitely not find a match, so just
     // resolve with undefined indicating "not found".
     outerPromise->MaybeResolveWithUndefined();
